vcs/specs/parser/fail/statements/missing_defer_body.vr
// @test: parse-fail
// @level: L0
// @tags: parser, statements, defer, body, error
// @description: Test defer statement with missing body
// @expected-error: E045

fn test() {
    defer;
}
